   things.

2. The RSS2.0 story template no longer includes $default_flavour in the
   link.  (Thanks Martin!)

3. PyBlosxom is now locale aware in respects to dates, months, days of the
   week and such.  Users should set the "locale" config property to a
   valid locale if they don't want English.

4. Added a $blog_icbm config variable, for use in the ICBM meta tag.


Pertinent to developers:
------------------------

1. Lots of code clean-up, documentation, and some refactoring.


Changes between 1.3.1 and 1.3.2
===============================

Pertinent to users:
-------------------

1. Fixes a security issue where the path_info can come in with multiple
   / at the beginning.  Whether this happens or not depends on the 
   web-server you're using and possibly other things.  Some people have
   the issue and some don't.  If you're in doubt, upgrade.  Thanks FX!


Changes between 1.3 and 1.3.1
=============================

Pertinent to users:
-------------------

1. The "num_entries" property now affects the home page and category
   index pages.  It no longer affects archive index pages.

2. Fixed the RSS 0.9.1 feed templates.  It has the correct link url
   and shows the entry bodies.  Thanks Norbert!

3. The version string is correct.

4. Added support for $body_escaped .

5. Fixed the blog encoding on the RSS 2.0 feed so that it uses the
   value provided in the config.py $blog_encoding variable.

6. Fixed the Atom 1.0 story flavour to use $body_escaped instead of
   <![CDATA[ $body ]]>

7. Fixed a problem with static rendering where we'd render "/index.html"
   and "//index.html" if the user had entries in their root category.


Pertinent to developers:
------------------------

1. If you have plugins that use the logger functions in PyBlosxom 1.2,
   you need to update those plugins to use the new logger functions in
   PyBlosxom 1.3.  Read through the API for details.

2. Moved documentation in ReadMeForPlugins.py over to the manual.

